[package]
name = "sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.22"
ring = "0.16.20"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.34"
ureq = "2.5.0"
