[package]
name = "transip-api"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.22"
hostname = "0.3.1"
lazy_static = "1.4.0"
ring = "0.16.20"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.34"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
trust-dns-resolver = { version = "0.22.0" }
ureq = { version = "2.5.0", features = ["json"] }
