[package]
name = "transip-api"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
hostname = "0.3.1"
ring = "0.16.20"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.34"
tracing = "0.1.36"
ureq = { version = "2.5.0", features = ["json"] }
