[package]
name = "transip-api"
version = "0.3.0"
edition = "2021"

[dependencies]
base64 = "0.20.0"
chrono = { version = "0.4.22", features = ["serde"] }
directories = "4.0"
hostname = "0.3.1"
lazy_static = "1.4.0"
ring = "0.16.20"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.34"
tracing = "0.1.36"
ureq = { version = "2.5.0", features = ["json"] }
