[package]
authors.workspace = true
description = "Waiting for propagation of acme validation record"
edition.workspace = true
license.workspace = true
name = "acme-validation-propagation"
repository.workspace = true
version.workspace = true

[dependencies]
thiserror = "1"
tracing = "0.1"
hickory-resolver = "0.24"

[dev-dependencies]
tracing-subscriber = "0.3"