[package]
name = "http-client"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
http = "1.1.0"
# http-body = "1.0.1"
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ureq = "2.10.1"

[target.'cfg(target_family = "wasm")'.dependencies]
waki = { git = "https://github.com/wacker-dev/waki" }
