[package]
edition.workspace = true
name = "transip-acme-challenge"
version.workspace = true

[dependencies]
acme-validation-propagation = { path = "../acme-validation-propagation" }
thiserror = "1.0.49"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
transip = { version = "0.1.5", path = "../transip" }
