[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "transip-api-ping"
repository.workspace = true
version.workspace = true

[dependencies]
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-journald = "0.3.0"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
transip-api = { version = "0.3.0", path = "../transip-api" }
