[package]
name = "transip-api"
version = "0.3.0"
edition = "2021"

[dependencies]
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
hostname = "0.3"
lazy_static = "1"
ring = "0.16"
rustls-pemfile = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
ureq = { version = "2", features = ["json"] }
