[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "transip-api"
repository.workspace = true
version.workspace = true

[dependencies]
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
hostname = "0.3"
lazy_static = "1"
ring = "0.16"
rustls-pemfile = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
log = "0.4.20"
tracing-appender = "0.2.2"
tracing-log = "0.1"
tracing-subscriber = "0.3.17"
