[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "transip-ping"
repository.workspace = true
version.workspace = true

[dependencies]
thiserror = "1.0.49"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
transip = { version = "0.1.0", path = "../transip" }
