[package]
authors.workspace = true
description = "Call functions on the Transip Api Endpoint"
edition.workspace = true
license.workspace = true
name = "transip"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
derive = "1.0.0"
features = "0.10.0"
ring = "0.17"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wiremock = "0.6.0"
