[package]
authors.workspace = true
description = "Call functions on the Transip Api Endpoint"
edition.workspace = true
license.workspace = true
name = "transip"
repository.workspace = true
rust-version = "1.76.0"
version.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
ring = "0.17.8"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
tracing = "0.1.40"
ureq = { version = "2.10.1", features = ["json"] }

[dev-dependencies]
env_logger = "0.11.5"
httpmock = "0.7.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
