[package]
authors.workspace = true
description = "Call functions on the Transip Api Endpoint"
edition = "2024"
license.workspace = true
name = "transip"
repository.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
ring = "0.17.8"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.138"
strum = { version = "0.27.0", features = ["derive"] }
thiserror = "2.0.3"
tracing = "0.1.40"
ureq = { version = "3.0.2", features = ["json"] }

[dev-dependencies]
env_logger = "0.11.5"
httpmock = "0.7.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
